# polis

./: .checkov.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .osv-scanner.toml  .trivyignore  CODEOWNERS  Cargo.toml  DEVELOPER_GUIDE.md  DOCKER_SECRETS_FIX.md  E2E_TEST_PERFORMANCE_FIX.md  Justfile  README.md  RELAX_SECURITY_LEVEL_FIX.md  TEST_FIXES_SUMMARY.md  cloud-init.yaml  docker-compose.test.yml  docker-compose.yml  polis-dev.yaml  polis-vm.yaml  sonar-project.properties  test_output.txt
.github/: dependabot.yml  pull_request_template.md
agents/: agents.json
cli/: Cargo.toml  build.rs  deny_imports.sh  polis-approve.sh  polis.sh
cli/.cargo/: config.toml
cli/proptest-regressions/commands/: doctor.txt  init.txt  run.txt  status.txt
cli/proptest-regressions/workspace/: health.txt
cli/src/: app.rs  assets.rs  cli.rs  command_runner.rs  lib.rs  main.rs  multipass.rs  provisioner.rs  ssh.rs  state.rs  test_utils.rs  valkey.rs  workspace.rs
cli/src/application/: mod.rs  ports.rs  provisioning.rs
cli/src/application/services/: agent_activate.rs  agent_crud.rs  cleanup.rs  cleanup_service.rs  config_service.rs  connect.rs  mod.rs  provisioning.rs  security.rs  security_service.rs  ssh.rs  update.rs  workspace_delete.rs  workspace_doctor.rs  workspace_exec.rs  workspace_repair.rs  workspace_start.rs  workspace_status.rs  workspace_stop.rs
cli/src/application/services/agent/: activate.rs  artifacts.rs  install.rs  list.rs  mod.rs  registry.rs  remove.rs
cli/src/application/services/vm/: health.rs  integrity.rs  lifecycle.rs  mod.rs  provision.rs  services.rs
cli/src/application/services/workspace/: delete.rs  doctor.rs  exec.rs  mod.rs  repair.rs  start.rs  status.rs  stop.rs
cli/src/application/vm/: compose.rs  health.rs  integrity.rs  lifecycle.rs  mod.rs  provision.rs  pull.rs  test_support.rs
cli/src/commands/: agent.rs  agents.rs  config.rs  connect.rs  dashboard.rs  delete.rs  doctor.rs  exec.rs  init.rs  internal.rs  logs.rs  mod.rs  run.rs  security.rs  start.rs  status.rs  stop.rs  update.rs  update_helpers.rs  version.rs
cli/src/commands/agent/: activate.rs  install.rs  list.rs  mod.rs  remove.rs
cli/src/commands/security/: approve.rs  deny.rs  level.rs  log.rs  mod.rs  pending.rs  rule.rs  status.rs
cli/src/dashboard/: mod.rs
cli/src/domain/: config.rs  error.rs  health.rs  mod.rs  process.rs  security.rs  ssh.rs  util.rs  workspace.rs
cli/src/domain/agent/: artifacts.rs  mod.rs  validate.rs
cli/src/infra/: assets.rs  blocking.rs  command_runner.rs  config.rs  control_plane.rs  fs.rs  image.rs  mod.rs  network.rs  polis_dir.rs  process.rs  provisioner.rs  secure_fs.rs  security_gateway.rs  ssh.rs  state.rs  update.rs
cli/src/infra/ssh/: config.rs  identity.rs  known_hosts.rs  mod.rs  sockets.rs  transport.rs
cli/src/output/: human.rs  json.rs  mod.rs  models.rs  progress.rs  reporter.rs  styles.rs  tests.rs
cli/src/workspace/: digest.rs  health.rs  image.rs  mod.rs  vm.rs
cli/tests/: cli_tests.proptest-regressions  cli_tests.rs  config_command.proptest-regressions  config_command.rs  connect_command.rs  container_update.rs  doctor_command.rs  doctor_image_checks.rs  host_key_pinning.rs  init_command.rs  json_output.rs  logs_command.rs  output_context.rs  run_state_machine.proptest-regressions  run_state_machine.rs  ssh_proxy_command.rs  start_stop_delete.rs  status_command.rs  update_command.rs  valkey_activity.rs  versions_manifest.rs
cli/tests/integration/: cli_tests.rs  config_command.rs  connect_command.rs  main.rs  update_command.rs
cli/tests/proptest-regressions/: property_tests.txt  provisioner_tests.txt
cli/tests/unit/: agent_command.rs  agent_crud_service.rs  architecture.rs  config_command.rs  connect_command.rs  container_update.rs  delete_command.rs  doctor_command.rs  doctor_service.rs  helpers.rs  main.rs  mocks.rs  output.rs  property_tests.rs  provisioner_tests.rs  security_command.rs  start_command.rs  start_stop_delete.rs  status_command.rs  stop_command.rs  version_command.rs  workspace_start_service.rs
config/: c-icap.conf  clamd.conf  dns-blocklist.txt  g3proxy.yaml  molis.yaml  molis_approval.conf  molis_dlp.conf  polis-init.service  polis.yaml  squidclamav.conf  valkey.conf
crates/molis-approve-cli/: Cargo.toml
crates/molis-approve-cli/src/: main.rs
crates/molis-approve-cli/tests/: cli_tests.rs
crates/molis-mcp-agent/: Cargo.toml
crates/molis-mcp-agent/src/: main.rs  state.rs  tools.rs
crates/polis-mcp-agent/: Cargo.toml
crates/polis-mcp-agent/src/: main.rs  state.rs  tools.rs
deploy/: docker-compose.yml
dhi/: alpine-base-3.23-dev.Dockerfile  build.sh  clamav-1.5.Dockerfile  clamav-entrypoint.sh  debian-base-trixie-dev.Dockerfile  debian-base-trixie.Dockerfile  golang-1-dev.Dockerfile  rust-1-dev.Dockerfile  valkey-8.1.Dockerfile
docs/: 13-repo-reorganization.md  ARM64-SUPPORT-AUDIT.md  CODER.md  DEVELOPER.md  MOCKING_PATTERNS.md  ProductRequirements.txt  SPEC-cloud-image-migration.md  TESTER.md  (+12 more)
lib/crates/polis-common/: Cargo.toml
lib/crates/polis-common/proptest-regressions/: agent.txt
lib/crates/polis-common/src/: agent.rs  config.rs  lib.rs  redis_keys.rs  types.rs
services/control-plane/crates/cp-api-types/: Cargo.toml
services/control-plane/crates/cp-api-types/src/: config.rs  lib.rs  observability.rs  workspace.rs
services/control-plane/crates/cp-server/: Cargo.toml
services/control-plane/crates/cp-server/src/: auth.rs  config.rs  config_api.rs  docker.rs  error.rs  lib.rs  main.rs  observability_api.rs  state.rs  workspace_api.rs
services/control-plane/crates/cp-server/tests/: integration.rs
services/control-plane/crates/cp-server/web/: index.html
services/toolbox/crates/approve-cli/: Cargo.toml
services/toolbox/crates/approve-cli/src/: main.rs
services/toolbox/crates/approve-cli/tests/: cli_tests.rs
services/toolbox/crates/mcp-agent/: Cargo.toml
services/toolbox/crates/mcp-agent/src/: main.rs  state.rs  tools.rs
services/toolbox/crates/toolbox-server/: Cargo.toml
services/toolbox/crates/toolbox-server/src/: main.rs  tools.rs
(+404 files in other folders)
