[workspace]
members = [
    "cli",
    "services/toolbox/crates/mcp-agent",
    "services/toolbox/crates/approve-cli",
    "lib/crates/polis-common",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
