[package]
name = "polis-cli"
version = "0.1.0"
edition = "2024"
description = "Polis CLI - Secure workspaces for AI coding agents"
license = "MIT"
repository = "https://github.com/OdraLabsHQ/polis"

[[bin]]
name = "polis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
console = "0.16"
indicatif = "0.18"
polis-common = { path = "../lib/crates/polis-common" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.5"

[lints]
workspace = true
