[package]
name = "polis-cli"
version = "0.1.0"
edition = "2024"
description = "Polis CLI - Secure workspaces for AI coding agents"
license = "MIT"
repository = "https://github.com/OdraLabsHQ/polis"

[[bin]]
name = "polis"
path = "src/main.rs"

[lib]
name = "polis_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
console = "0.16"
indicatif = "0.18"
polis-common = { path = "../lib/crates/polis-common" }
chrono = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "streams"] }
serde_json = "1.0"
dirs = "5"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.5"
serde_json = "1.0"
tempfile = "3.14"  # isolated temp dirs for StateManager tests
tokio = { version = "1", features = ["rt", "macros"] }  # #[tokio::test] for async ValkeyClient methods

[lints]
workspace = true
