[workspace]
members = [
    ".",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[package]
name = "polis-cli"
version = "0.1.0"
edition = "2024"
description = "Polis CLI - Secure workspaces for AI coding agents"
license = "MIT"
repository = "https://github.com/OdraLabsHQ/polis"

[[bin]]
name = "polis"
path = "src/main.rs"

[lib]
name = "polis_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
console = "0.16"
indicatif = "0.18"
polis-common = { path = "../lib/crates/polis-common" }
chrono = "0.4"
serde_json = "1.0"
dirs = "6"
dialoguer = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2", "signatures"] }
semver = "1.0"
zipsign-api = { version = "0.2", default-features = false, features = ["verify-tar", "unsign-tar"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
ureq = "2.12"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
proptest = "1.10"
serde_json = "1.0"
tempfile = "3.25"  # isolated temp dirs for StateManager tests

[lints]
workspace = true
