[package]
name = "molis-approve-cli"
version = "0.1.0"
edition = "2021"
description = "CLI approval tool for Molis HITL approval system"

[[bin]]
name = "molis-approve"
path = "src/main.rs"

[dependencies]
molis-mcp-common = { path = "../molis-mcp-common" }
clap = { version = "4.0", features = ["derive"] }
redis = { version = "0.27", features = ["tokio-rustls-comp"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
