[package]
name = "polis-mcp-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
polis-mcp-common = { path = "../polis-mcp-common" }
rmcp = { version = "0.14", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.0"
tokio = { version = "1.0", features = ["full"] }
deadpool-redis = { version = "0.22", features = ["tls-rustls", "tokio-rustls-comp"] }
# NOTE: Do NOT add a direct `redis` dependency — use `deadpool_redis::redis`
# re-export to avoid version conflicts. deadpool-redis 0.22 uses redis 0.32.
# The rustls dependency below is ONLY for installing the crypto provider at startup.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# rustls-pemfile is used to validate PEM cert files at startup (optional).
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
percent-encoding = "2.3"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
