[package]
name = "polis-common"
version = "0.1.0"
edition = "2024"
description = "Shared types for polis MCP servers"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"   # YAML deserialization for AgentManifest tests (no YAML support in std or existing deps)
proptest = "1.5"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Allow pre-existing doc style issues — will be cleaned up incrementally
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
