[package]
name = "cp-api-types"
version = "0.1.0"
edition = "2024"
description = "Shared API types for the Polis control-plane service"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.5"
serde_json = "1.0"

[lints]
workspace = true
