[package]
name = "polis-approve-cli"
version = "0.1.0"
edition = "2021"
description = "CLI approval tool for polis HITL approval system"

[[bin]]
name = "polis-approve"
path = "src/main.rs"

[dependencies]
polis-common = { path = "../../../../lib/crates/polis-common" }
clap = { version = "4.0", features = ["derive"] }
redis = { version = "0.27", features = ["tokio-rustls-comp"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
