[package]
name = "polis-mcp-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
polis-common = { path = "../../../../lib/crates/polis-common" }
rmcp = { version = "0.14", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.0"
tokio = { version = "1.0", features = ["full"] }
fred = { version = "10.1", features = ["enable-rustls", "i-all"] }
rustls = "0.23"
rustls-pemfile = "2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
percent-encoding = "2.3"
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
